@@ -1,6 +1,8 @@
 * V1.6.14x
   * adding mode to skip tmp files/directories when downloading entry
   * fixing bug in entry downloader
+  * adding __version__ to CK kernel
+  * providing URLs where to download Git and Python for installation
 
 * V1.6.14
   * forgot to add cfg module to setup.py (preferred to generate new version)
